# sera

./: .gitignore  Makefile  README.md  daft.nix  default.nix  fetchNixpkgs.nix  graft.nix  macosx.config  patch-for-hpc.sh  redhat.config  release.nix  sera.cabal  sera.config  shell.nix  ubuntu.config  windows.config
data/: biogas.tsv  biomass-prices.tsv  config.yaml  delivery-costs.tsv  delivery-pathways.tsv  energy-prices-aeo2010.tsv  hrs-finance-template.xlsx  production-costs.tsv  production-from-biogas-costs.tsv  production-from-biogas-inputs.tsv  production-from-biogas-outputs.tsv  production-from-biogas-properties.tsv  production-inputs.tsv  production-properties.tsv
examples/invert-vehicle-stock/: configuration.yaml  market-share.tsv  regional-sales.tsv  stock.tsv
examples/vehicle-stock/: annual-travel.tsv  configuration.yaml  emission-rate.tsv  emission.tsv  energy.tsv  fuel-efficiency.tsv  fuel-split.tsv  market-share.tsv  regional-sales.tsv  sales.tsv  stock.tsv  verification.xlsx
src/: Main.hs  MainUnmangle.hs  SERA.hs
src/AEO/: Bulk.hs  Prices.hs  Types.hs
src/AEO/Prices/: Data.hs
src/SERA/: Constants.hs  Demand.hs  Energy.hs  Infrastructure.hs  Material.hs  Network.hs  Process.hs  Service.hs  Types.hs  Util.hs
src/SERA/Configuration/: FileLocations.hs  RiskInputs.hs  ScenarioInputs.hs
src/SERA/Energy/: Prices.hs  Types.hs
src/SERA/Finance/: Analysis.hs  Capital.hs  Demand.hs  Evaluation.hs  IO.hs  IRS946.hs  Project.hs  Risks.hs  Scenario.hs  Solution.hs  Summarization.hs  Types.hs
src/SERA/Finance/Analysis/: Assets.hs  BalanceSheet.hs  CashFlowStatement.hs  Equity.hs  Expenses.hs  FeedstockUtilityExpenses.hs  Finances.hs  IncomeStatement.hs  Liabilities.hs  OperatingExpenses.hs  PerformanceAnalysis.hs  Revenues.hs  Taxation.hs
src/SERA/Finance/Capital/: Stations.hs
src/SERA/Finance/IO/: Xlsx.hs
src/SERA/Finance/IO/Xlsx/: Template.hs
src/SERA/Infrastructure/: Flows.hs  IO.hs  Optimization.hs  Types.hs
src/SERA/Infrastructure/Optimization/: Legacy.hs
src/SERA/Material/: IO.hs  Prices.hs  Types.hs
src/SERA/Network/: Algorithms.hs  IO.hs  Types.hs
src/SERA/Process/: IO.hs  Reification.hs  Types.hs
src/SERA/Process/Reification/: Pathway.hs  Technology.hs
src/SERA/Refueling/: Location.hs  Types.hs
src/SERA/Refueling/EVSE/: Cost.hs
src/SERA/Refueling/EVSE/Cost/: CostComp23.hs  CostComp25.hs
src/SERA/Refueling/FCVSE/: Cost.hs  Sizing.hs
src/SERA/Refueling/FCVSE/Cost/: CostComp23.hs  CostComp25.hs  NREL56412.hs
src/SERA/Refueling/Hydrogen/: Sizing.hs
src/SERA/Refueling/Location/: Grid.hs  Progressive.hs  Seeding.hs
src/SERA/Scenario/: Grants.hs  HydrogenSizing.hs  Introduction.hs  Logistic.hs  Regionalization.hs  Types.hs
src/SERA/Service/: Finance.hs  HydrogenProduction.hs  HydrogenSizing.hs  Intraurban.hs  Introduction.hs  Logistic.hs  Regionalization.hs  VehicleStock.hs
src/SERA/Service/HydrogenProduction/: Legacy.hs
src/SERA/Types/: Cubes.hs  Fields.hs  Records.hs  TH.hs
src/SERA/Util/: Geography.hs  Jsonp.hs  Summarization.hs  Time.hs  Units.hs  Version.hs  Wilder.hs
src/SERA/Vehicle/: Stock.hs  Types.hs
src/SERA/Vehicle/MHD/: Census2002.hs  EMFAC2010.hs  Mitchell20141106.hs  TEDB32.hs
src/SERA/Vehicle/Stock/: Travel.hs  Types.hs
src/VISION/: Survival.hs  Travel.hs
