name: sera
version: 2.1.2.5
cabal-version: >= 1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: (c) 2013-2016 National Renewable Energy Laboratory
maintainer: Brian W Bush <brian.bush@nrel.gov>
stability: Stable
homepage: https://github.nrel.gov/haskell/sera
bug-reports: https://github.nrel.gov/haskell/sera/issues
synopsis: the synopsis

description: the description
category: Energy
author: Brian W Bush <brian.bush@nrel.gov>
data-dir: examples
data-files: 
          vehicle-stock/configuration.yaml
          vehicle-stock/regional-sales.tsv
          vehicle-stock/market-share.tsv
          vehicle-stock/annual-travel.tsv
          vehicle-stock/fuel-split.tsv
          vehicle-stock/fuel-efficiency.tsv
          vehicle-stock/emission-rate.tsv
          vehicle-stock/sales.tsv
          vehicle-stock/stock.tsv
          vehicle-stock/energy.tsv
          vehicle-stock/emission.tsv
          vehicle-stock/verification.xlsx
          invert-vehicle-stock/configuration.yaml
          invert-vehicle-stock/market-share.tsv
          invert-vehicle-stock/regional-sales.tsv
          invert-vehicle-stock/stock.tsv

source-repository head
  type: git
  location: git@github.nrel.gov:haskell/sera.git
 
library
  hs-source-dirs  : src
  exposed-modules : SERA
                    SERA.Refueling.Hydrogen.Sizing
                    SERA.Scenario.Introduction
                    SERA.Scenario.Logistic
                    SERA.Scenario.Regionalization
                    SERA.Service
                    SERA.Service.HydrogenSizing
                    SERA.Service.Logistic
                    SERA.Service.Regionalization
                    SERA.Service.VehicleStock
                    SERA.Types
                    SERA.Vehicle.MHD.Census2002
                    SERA.Vehicle.MHD.EMFAC2010
                    SERA.Vehicle.MHD.Mitchell20141106
                    SERA.Vehicle.MHD.TEDB32
                    SERA.Vehicle.Stock
                    SERA.Vehicle.Stock.Types
                    SERA.Vehicle.Types
                    VISION.Survival
                    VISION.Travel
  build-depends   : base >= 4 && < 5
                  , aeson
                  , containers
                  , daft
                  , data-default
                  , mtl
                  , raft
                  , statistics
                  , text
                  , tostring
                  , vinyl
                  , void
                  , yaml
  exposed         : True
  buildable       : True
  default-language: Haskell2010
  ghc-options     : -O2 -Wall

executable sera
  hs-source-dirs  : src
  main-is         : Main.hs
  build-depends   : base
                  , aeson
                  , cmdargs
                  , containers
                  , daft
                  , data-default
                  , directory
                  , filepath
                  , mtl
                  , raft
                  , statistics
                  , text
                  , tostring
                  , vinyl
                  , void
                  , yaml
  buildable       : True
  default-language: Haskell2010
  ghc-options     : -threaded -O2 -rtsopts -Wall
