name: sera
version: 2.1.0.1
cabal-version: >= 1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: (c) 2013-2016 National Renewable Energy Laboratory
maintainer: Brian W Bush <brian.bush@nrel.gov>
stability: Stable
homepage: https://github.nrel.gov/haskell/sera
bug-reports: https://github.nrel.gov/haskell/sera/issues
synopsis: the synopsis

description: the description
category: Energy
author: Brian W Bush <brian.bush@nrel.gov>
data-dir: examples
data-files: 
          vehicle-stock/configuration.yaml
          vehicle-stock/regional-sales.tsv
          vehicle-stock/market-share.tsv
          vehicle-stock/annual-travel.tsv
          vehicle-stock/fuel-split.tsv
          vehicle-stock/fuel-efficiency.tsv
          vehicle-stock/emission-rate.tsv
          vehicle-stock/sales.tsv
          vehicle-stock/stock.tsv
          vehicle-stock/energy.tsv
          vehicle-stock/emission.tsv
          vehicle-stock/verification.xlsx
          invert-vehicle-stock/configuration.yaml
          invert-vehicle-stock/market-share.tsv
          invert-vehicle-stock/regional-sales.tsv
          invert-vehicle-stock/stock.tsv

source-repository head
  type: git
  location: git@github.nrel.gov:haskell/sera.git
 
library
  hs-source-dirs  : src
  exposed-modules : AEO.Prices
                    AEO.Types
                    SERA
                    SERA.Configuration.RiskInputs
                    SERA.Configuration.ScenarioInputs
                    SERA.Constants
                    SERA.Energy
                    SERA.Finance.Analysis
                    SERA.Finance.Analysis.Assets
                    SERA.Finance.Analysis.BalanceSheet
                    SERA.Finance.Analysis.CashFlowStatement
                    SERA.Finance.Analysis.Equity
                    SERA.Finance.Analysis.Expenses
                    SERA.Finance.Analysis.FeedstockUtilityExpenses
                    SERA.Finance.Analysis.Finances
                    SERA.Finance.Analysis.IncomeStatement
                    SERA.Finance.Analysis.Liabilities
                    SERA.Finance.Analysis.OperatingExpenses
                    SERA.Finance.Analysis.PerformanceAnalysis
                    SERA.Finance.Analysis.Revenues
                    SERA.Finance.Analysis.Taxation
                    SERA.Finance.Capital
                    SERA.Finance.Capital.Stations
                    SERA.Finance.Demand
                    SERA.Finance.Evaluation
                    SERA.Finance.IO
                    SERA.Finance.IO.Xlsx
                    SERA.Finance.IO.Xlsx.Template
                    SERA.Finance.IRS946
                    SERA.Finance.Project
                    SERA.Finance.Risks
                    SERA.Finance.Scenario
                    SERA.Finance.Solution
                    SERA.Finance.Summarization
                    SERA.Finance.Types
                    SERA.Refueling.FCVSE.Cost
                    SERA.Refueling.FCVSE.Cost.NREL56412
                    SERA.Refueling.Hydrogen.Sizing
                    SERA.Scenario.Introduction
                    SERA.Scenario.Logistic
                    SERA.Scenario.Regionalization
                    SERA.Service
                    SERA.Service.Finance
                    SERA.Service.HydrogenSizing
                    SERA.Service.Logistic
                    SERA.Service.Regionalization
                    SERA.Service.VehicleStock
                    SERA.Types
                    SERA.Util.Summarization
                    SERA.Util.Time
                    SERA.Util.Units
                    SERA.Vehicle.MHD.Census2002
                    SERA.Vehicle.MHD.EMFAC2010
                    SERA.Vehicle.MHD.Mitchell20141106
                    SERA.Vehicle.MHD.TEDB32
                    SERA.Vehicle.Stock
                    SERA.Vehicle.Stock.Types
                    SERA.Vehicle.Types
                    VISION.Survival
                    VISION.Travel
  build-depends   : base >= 4 && < 5
                  , aeson
                  , bytestring
                  , containers
                  , daft
                  , data-default
                  , file-embed
                  , monoid-extras
                  , mtl
                  , raft
                  , regex-posix
                  , split
                  , statistics
                  , text
                  , tostring
                  , vinyl
                  , void
                  , yaml
                  , zip-archive
  exposed         : True
  buildable       : True
  default-language: Haskell2010
  ghc-options     : -O2 -Wall -fno-warn-deprecations

executable sera
  hs-source-dirs  : src
  main-is         : Main.hs
  build-depends   : base
                  , aeson
                  , bytestring
                  , cmdargs
                  , containers
                  , daft
                  , data-default
                  , directory
                  , file-embed
                  , filepath
                  , monoid-extras
                  , mtl
                  , raft
                  , regex-posix
                  , split
                  , statistics
                  , text
                  , tostring
                  , vinyl
                  , void
                  , yaml
                  , zip-archive
  buildable       : True
  default-language: Haskell2010
  ghc-options     : -threaded -O2 -rtsopts -Wall -fno-warn-deprecations

executable unmangle-excel
  hs-source-dirs  : src
  main-is         : MainUnmangle.hs
  build-depends   : base
                  , bytestring
  buildable       : True
  default-language: Haskell2010
  ghc-options     : -threaded -O2 -rtsopts -Wall
