name: sera
version: 3.3.1.16.5
cabal-version: >= 1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
copyright: (c) 2013-2016 National Renewable Energy Laboratory
maintainer: Brian W Bush <brian.bush@nrel.gov>
stability: Stable
homepage: https://github.nrel.gov/haskell/sera
bug-reports: https://github.nrel.gov/haskell/sera/issues
synopsis: the synopsis

description: the description
category: Energy
author: Brian W Bush <brian.bush@nrel.gov>
data-dir: examples
data-files: 
          vehicle-stock/configuration.yaml
          vehicle-stock/regional-sales.tsv
          vehicle-stock/market-share.tsv
          vehicle-stock/annual-travel.tsv
          vehicle-stock/fuel-split.tsv
          vehicle-stock/fuel-efficiency.tsv
          vehicle-stock/emission-rate.tsv
          vehicle-stock/sales.tsv
          vehicle-stock/stock.tsv
          vehicle-stock/energy.tsv
          vehicle-stock/emission.tsv
          vehicle-stock/verification.xlsx
          invert-vehicle-stock/configuration.yaml
          invert-vehicle-stock/market-share.tsv
          invert-vehicle-stock/regional-sales.tsv
          invert-vehicle-stock/stock.tsv

source-repository head
  type: git
  location: git@github.nrel.gov:haskell/sera.git
 
library
  hs-source-dirs  : src
  exposed-modules : AEO.Prices
                    AEO.Types
                    SERA
                    SERA.Configuration.FileLocations
                    SERA.Configuration.RiskInputs
                    SERA.Configuration.ScenarioInputs
                    SERA.Constants
                    SERA.Demand
                    SERA.Energy
                    SERA.Energy.Types
                    SERA.Finance.Analysis
                    SERA.Finance.Analysis.Assets
                    SERA.Finance.Analysis.BalanceSheet
                    SERA.Finance.Analysis.CashFlowStatement
                    SERA.Finance.Analysis.Equity
                    SERA.Finance.Analysis.Expenses
                    SERA.Finance.Analysis.FeedstockUtilityExpenses
                    SERA.Finance.Analysis.Finances
                    SERA.Finance.Analysis.IncomeStatement
                    SERA.Finance.Analysis.Liabilities
                    SERA.Finance.Analysis.OperatingExpenses
                    SERA.Finance.Analysis.PerformanceAnalysis
                    SERA.Finance.Analysis.Revenues
                    SERA.Finance.Analysis.Taxation
                    SERA.Finance.Capital
                    SERA.Finance.Capital.Stations
                    SERA.Finance.Demand
                    SERA.Finance.Evaluation
                    SERA.Finance.IO
                    SERA.Finance.IO.Xlsx
                    SERA.Finance.IO.Xlsx.Template
                    SERA.Finance.IRS946
                    SERA.Finance.Project
                    SERA.Finance.Risks
                    SERA.Finance.Scenario
                    SERA.Finance.Solution
                    SERA.Finance.Summarization
                    SERA.Finance.Types
                    SERA.Infrastructure
                    SERA.Infrastructure.Flows
                    SERA.Infrastructure.Optimization
                    SERA.Material
                    SERA.Network
                    SERA.Network.Algorithms
                    SERA.Process
                    SERA.Process.Reification
                    SERA.Refueling.EVSE.Cost
                    SERA.Refueling.EVSE.Cost.CostComp23
                    SERA.Refueling.EVSE.Cost.CostComp25
                    SERA.Refueling.FCVSE.Cost
                    SERA.Refueling.FCVSE.Cost.CostComp23
                    SERA.Refueling.FCVSE.Cost.CostComp25
                    SERA.Refueling.FCVSE.Cost.NREL56412
                    SERA.Refueling.FCVSE.Sizing
                    SERA.Refueling.Hydrogen.Sizing
                    SERA.Refueling.Types
                    SERA.Scenario.Grants
                    SERA.Scenario.HydrogenSizing
                    SERA.Scenario.Introduction
                    SERA.Scenario.Logistic
                    SERA.Scenario.Regionalization
                    SERA.Scenario.Types
                    SERA.Service
                    SERA.Service.Finance
                    SERA.Service.HydrogenProduction
                    SERA.Service.HydrogenSizing
                    SERA.Service.Intraurban
                    SERA.Service.Logistic
                    SERA.Service.Regionalization
                    SERA.Service.VehicleStock
                    SERA.Types
                    SERA.Types.Cubes
                    SERA.Types.Fields
                    SERA.Types.Records
                    SERA.Types.TH
                    SERA.Util
                    SERA.Util.Summarization
                    SERA.Util.Time
                    SERA.Util.Units
                    SERA.Util.Version
                    SERA.Util.Wilder
                    SERA.Vehicle.MHD.Census2002
                    SERA.Vehicle.MHD.EMFAC2010
                    SERA.Vehicle.MHD.Mitchell20141106
                    SERA.Vehicle.MHD.TEDB32
                    SERA.Vehicle.Stock
                    VISION.Survival
                    VISION.Travel
  build-depends   : base >= 4 && < 5
                  , aeson
                  , bytestring
                  , containers
                  , daft
                  , data-default
                  , file-embed
                  , graft
                  , hmatrix-glpk
                  , logging-effect
                  , MonadRandom
                  , monoid-extras
                  , mtl
                  , parallel
                  , pqueue
                  , raft
                  , regex-posix
                  , split
                  , statistics
                  , template-haskell
                  , text
                  , tostring
                  , vinyl
                  , void
                  , yaml
                  , zip-archive
  exposed         : True
  buildable       : True
  default-language: Haskell2010
  if os(windows)
    ghc-options   : -Wall -fno-warn-deprecations
  else
    ghc-options   : -Wall -fno-warn-deprecations

executable sera
  hs-source-dirs  : src
  main-is         : Main.hs
  build-depends   : base
                  , aeson
                  , bytestring
                  , cmdargs
                  , containers
                  , daft
                  , data-default
                  , directory
                  , file-embed
                  , filepath
                  , graft
                  , hmatrix-glpk
                  , logging-effect
                  , monoid-extras
                  , mtl
                  , pqueue
                  , raft
                  , regex-posix
                  , split
                  , statistics
                  , template-haskell
                  , text
                  , tostring
                  , vinyl
                  , void
                  , yaml
                  , zip-archive
  buildable       : True
  default-language: Haskell2010
  if os(windows)
    ghc-options   : -threaded -rtsopts -Wall -fno-warn-deprecations
  else
    ghc-options   : -threaded -rtsopts -Wall -fno-warn-deprecations
